--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/src/style/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>        
@@ -42,7 +43,7 @@
    <header>
      <div class=" container-fluid main--heading">
        <h1 class="display-2 text-center">DISCOVER</h1>
-       <h1 class="display-3 text-center">the world</h1>
+       <h3 class="display-3 text-center">the world</h3>
        <div class="btn-box text-center">
         <button class="btn btn-lg px-4">Explore Now</button>
        </div>
